// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > Progress baseVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-0843df2e=""
>
  <div
    class="example-progress__item"
    data-v-0843df2e=""
  >
    <div
      class="t-progress"
      data-v-0843df2e=""
    >
      <!-- LINE -->
      <div
        class="t-progress--thin t-progress--status-default"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 80%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          80%
        </div>
      </div>
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-0843df2e=""
  >
    <div
      class="t-progress"
      data-v-0843df2e=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-default"
      >
        <div
          class="t-progress__inner"
          style="width: 80%;"
        >
          <div
            class="t-progress__info"
          >
            80%
          </div>
        </div>
        <!--v-if-->
      </div>
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-0843df2e=""
  >
    <div
      class="t-progress"
      data-v-0843df2e=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <div
        class="t-progress--circle t-progress--status-default"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          30%
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="99.90264638415542  233.10617489636263"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress circleVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-abd06230=""
>
  <div
    class="example-progress__item"
    data-v-abd06230=""
  >
    <div
      class="t-progress"
      data-v-abd06230=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <div
        class="t-progress--circle t-progress--status-default"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          80%
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="266.4070570244145  66.6017642561036"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-abd06230=""
  >
    <div
      class="t-progress"
      data-v-abd06230=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <div
        class="t-progress--circle t-progress--status-warning"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-error t-progress__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M13 2v14.5h-2V2h2zm-2 17h2v2h-2v-2z"
              fill="currentColor"
            />
          </svg>
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="266.4070570244145  66.6017642561036"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-abd06230=""
  >
    <div
      class="t-progress"
      data-v-abd06230=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <div
        class="t-progress--circle t-progress--status-error"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-close t-progress__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="266.4070570244145  66.6017642561036"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-abd06230=""
  >
    <div
      class="t-progress"
      data-v-abd06230=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <div
        class="t-progress--circle t-progress--status-success"
        style="width: 112px; height: 112px;"
      >
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-check t-progress__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
              fill="currentColor"
            />
          </svg>
        </div>
        <svg
          height="112"
          viewBox="0 0 112 112"
          width="112"
        >
          <circle
            class="t-progress__circle-outer"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-width="6"
          />
          <circle
            class="t-progress__circle-inner"
            cx="56"
            cy="56"
            fill="none"
            r="53"
            stroke-dasharray="266.4070570244145  66.6017642561036"
            stroke-linecap="round"
            stroke-width="6"
            transform="matrix(0,-1,1,0,0,112)"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > Progress customVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-e3f135ee=""
>
  <div
    class="example-progress__item"
    data-v-e3f135ee=""
  >
    <div
      class="t-progress"
      data-v-e3f135ee=""
    >
      <!-- LINE -->
      <div
        class="t-progress--thin t-progress--status-default"
      >
        <div
          class="t-progress__bar"
          style="background-color: rgb(234, 201, 255);"
        >
          <div
            class="t-progress__inner"
            style="width: 88%; background: rgb(205, 4, 255);"
          />
        </div>
        <div
          class="t-progress__info"
        >
          
          <span
            class="label--color"
            data-v-e3f135ee=""
          >
            88%
          </span>
          
        </div>
      </div>
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-e3f135ee=""
  >
    <div
      class="t-progress radius--round"
      data-v-e3f135ee=""
    >
      <!-- LINE -->
      <div
        class="t-progress--thin t-progress--status-default"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          88%
        </div>
      </div>
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Progress > Progress lineVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-ad591fe8=""
>
  <div
    class="example-progress__item"
    data-v-ad591fe8=""
  >
    <div
      class="t-progress"
      data-v-ad591fe8=""
    >
      <!-- LINE -->
      <div
        class="t-progress--thin t-progress--status-default"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 80%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          80%
        </div>
      </div>
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-ad591fe8=""
  >
    <div
      class="t-progress"
      data-v-ad591fe8=""
    >
      <!-- LINE -->
      <div
        class="t-progress--thin t-progress--status-warning"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-error-circle-filled t-progress__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-ad591fe8=""
  >
    <div
      class="t-progress"
      data-v-ad591fe8=""
    >
      <!-- LINE -->
      <div
        class="t-progress--thin t-progress--status-error"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-error-circle-filled t-progress__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-ad591fe8=""
  >
    <div
      class="t-progress"
      data-v-ad591fe8=""
    >
      <!-- LINE -->
      <div
        class="t-progress--thin t-progress--status-success"
      >
        <div
          class="t-progress__bar"
        >
          <div
            class="t-progress__inner"
            style="width: 88%;"
          />
        </div>
        <div
          class="t-progress__info"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-progress__icon"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <!-- PLUMP -->
      <!--v-if-->
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Progress > Progress mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-6de369ba=""
>
  <h1
    class="title"
    data-v-6de369ba=""
  >
    Progress 进度条
  </h1>
  <p
    class="summary"
    data-v-6de369ba=""
  >
    用于展示任务当前的进度
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础进度条
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-0843df2e=""
        data-v-6de369ba=""
      >
        <div
          class="example-progress__item"
          data-v-0843df2e=""
        >
          <div
            class="t-progress"
            data-v-0843df2e=""
          >
            <!-- LINE -->
            <div
              class="t-progress--thin t-progress--status-default"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 80%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                80%
              </div>
            </div>
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-0843df2e=""
        >
          <div
            class="t-progress"
            data-v-0843df2e=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-default"
            >
              <div
                class="t-progress__inner"
                style="width: 80%;"
              >
                <div
                  class="t-progress__info"
                >
                  80%
                </div>
              </div>
              <!--v-if-->
            </div>
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-0843df2e=""
        >
          <div
            class="t-progress"
            data-v-0843df2e=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <div
              class="t-progress--circle t-progress--status-default"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                30%
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="99.90264638415542  233.10617489636263"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-6de369ba=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        过渡样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-1cf0f4ed=""
        data-v-6de369ba=""
      >
        <div
          class="t-progress"
          data-v-1cf0f4ed=""
        >
          <!-- LINE -->
          <div
            class="t-progress--thin t-progress--status-default"
          >
            <div
              class="t-progress__bar"
            >
              <div
                class="t-progress__inner"
                style="width: 88%;"
              />
            </div>
            <div
              class="t-progress__info"
            >
              88%
            </div>
          </div>
          <!-- PLUMP -->
          <!--v-if-->
          <!-- CIRCLE -->
          <!--v-if-->
        </div>
        <div
          class="button-group"
          data-v-1cf0f4ed=""
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-small t-button--outline t-button--primary t-button--rectangle"
            data-v-1cf0f4ed=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              减少
              
            </span>
            <!---->
          </button>
          <div
            class="space"
            data-v-1cf0f4ed=""
          />
          <button
            aria-disabled="false"
            class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
            data-v-1cf0f4ed=""
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              增加
              
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-6de369ba=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义颜色/圆角
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-6de369ba=""
        data-v-e3f135ee=""
      >
        <div
          class="example-progress__item"
          data-v-e3f135ee=""
        >
          <div
            class="t-progress"
            data-v-e3f135ee=""
          >
            <!-- LINE -->
            <div
              class="t-progress--thin t-progress--status-default"
            >
              <div
                class="t-progress__bar"
                style="background-color: rgb(234, 201, 255);"
              >
                <div
                  class="t-progress__inner"
                  style="width: 88%; background: rgb(205, 4, 255);"
                />
              </div>
              <div
                class="t-progress__info"
              >
                
                <span
                  class="label--color"
                  data-v-e3f135ee=""
                >
                  88%
                </span>
                
              </div>
            </div>
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-e3f135ee=""
        >
          <div
            class="t-progress radius--round"
            data-v-e3f135ee=""
          >
            <!-- LINE -->
            <div
              class="t-progress--thin t-progress--status-default"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 88%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                88%
              </div>
            </div>
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-6de369ba=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        线性进度条
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-6de369ba=""
        data-v-ad591fe8=""
      >
        <div
          class="example-progress__item"
          data-v-ad591fe8=""
        >
          <div
            class="t-progress"
            data-v-ad591fe8=""
          >
            <!-- LINE -->
            <div
              class="t-progress--thin t-progress--status-default"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 80%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                80%
              </div>
            </div>
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-ad591fe8=""
        >
          <div
            class="t-progress"
            data-v-ad591fe8=""
          >
            <!-- LINE -->
            <div
              class="t-progress--thin t-progress--status-warning"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 88%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled t-progress__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-ad591fe8=""
        >
          <div
            class="t-progress"
            data-v-ad591fe8=""
          >
            <!-- LINE -->
            <div
              class="t-progress--thin t-progress--status-error"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 88%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-error-circle-filled t-progress__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 1a11 11 0 110 22 11 11 0 010-22zm-1 13h2V6.5h-2V14zm2 1.5h-2v2h2v-2z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-ad591fe8=""
        >
          <div
            class="t-progress"
            data-v-ad591fe8=""
          >
            <!-- LINE -->
            <div
              class="t-progress--thin t-progress--status-success"
            >
              <div
                class="t-progress__bar"
              >
                <div
                  class="t-progress__inner"
                  style="width: 88%;"
                />
              </div>
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-check-circle-filled t-progress__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 23a11 11 0 100-22 11 11 0 000 22zM7.5 10.59l3 3 6-6L17.91 9l-7.41 7.41L6.09 12l1.41-1.41z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-6de369ba=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        百分比内显进度条
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-6de369ba=""
        data-v-e578db18=""
      >
        <div
          class="example-progress__item"
          data-v-e578db18=""
        >
          <div
            class="t-progress"
            data-v-e578db18=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-default"
            >
              <div
                class="t-progress__inner"
                style="width: 80%;"
              >
                <div
                  class="t-progress__info"
                >
                  80%
                </div>
              </div>
              <!--v-if-->
            </div>
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-e578db18=""
        >
          <div
            class="t-progress"
            data-v-e578db18=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-warning"
            >
              <div
                class="t-progress__inner"
                style="width: 88%;"
              >
                <div
                  class="t-progress__info"
                >
                  88%
                </div>
              </div>
              <!--v-if-->
            </div>
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-e578db18=""
        >
          <div
            class="t-progress"
            data-v-e578db18=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-error"
            >
              <div
                class="t-progress__inner"
                style="width: 88%;"
              >
                <div
                  class="t-progress__info"
                >
                  88%
                </div>
              </div>
              <!--v-if-->
            </div>
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-e578db18=""
        >
          <div
            class="t-progress"
            data-v-e578db18=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <div
              class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-success"
            >
              <div
                class="t-progress__inner"
                style="width: 88%;"
              >
                <div
                  class="t-progress__info"
                >
                  88%
                </div>
              </div>
              <!--v-if-->
            </div>
            <!-- CIRCLE -->
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-6de369ba=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        环形进度条
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <div
        class="example-progress"
        data-v-6de369ba=""
        data-v-abd06230=""
      >
        <div
          class="example-progress__item"
          data-v-abd06230=""
        >
          <div
            class="t-progress"
            data-v-abd06230=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <div
              class="t-progress--circle t-progress--status-default"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                80%
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="266.4070570244145  66.6017642561036"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-abd06230=""
        >
          <div
            class="t-progress"
            data-v-abd06230=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <div
              class="t-progress--circle t-progress--status-warning"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-error t-progress__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M13 2v14.5h-2V2h2zm-2 17h2v2h-2v-2z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="266.4070570244145  66.6017642561036"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-abd06230=""
        >
          <div
            class="t-progress"
            data-v-abd06230=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <div
              class="t-progress--circle t-progress--status-error"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-close t-progress__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="266.4070570244145  66.6017642561036"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="example-progress__item"
          data-v-abd06230=""
        >
          <div
            class="t-progress"
            data-v-abd06230=""
          >
            <!-- LINE -->
            <!--v-if-->
            <!-- PLUMP -->
            <!--v-if-->
            <!-- CIRCLE -->
            <div
              class="t-progress--circle t-progress--status-success"
              style="width: 112px; height: 112px;"
            >
              <div
                class="t-progress__info"
              >
                <svg
                  class="t-icon t-icon-check t-progress__icon"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M20.99 7.38l-10.61 10.6L4 11.63l1.42-1.41 4.95 4.95 9.2-9.2 1.4 1.42z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <svg
                height="112"
                viewBox="0 0 112 112"
                width="112"
              >
                <circle
                  class="t-progress__circle-outer"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-width="6"
                />
                <circle
                  class="t-progress__circle-inner"
                  cx="56"
                  cy="56"
                  fill="none"
                  r="53"
                  stroke-dasharray="266.4070570244145  66.6017642561036"
                  stroke-linecap="round"
                  stroke-width="6"
                  transform="matrix(0,-1,1,0,0,112)"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Progress > Progress plumpVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-e578db18=""
>
  <div
    class="example-progress__item"
    data-v-e578db18=""
  >
    <div
      class="t-progress"
      data-v-e578db18=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-default"
      >
        <div
          class="t-progress__inner"
          style="width: 80%;"
        >
          <div
            class="t-progress__info"
          >
            80%
          </div>
        </div>
        <!--v-if-->
      </div>
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-e578db18=""
  >
    <div
      class="t-progress"
      data-v-e578db18=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-warning"
      >
        <div
          class="t-progress__inner"
          style="width: 88%;"
        >
          <div
            class="t-progress__info"
          >
            88%
          </div>
        </div>
        <!--v-if-->
      </div>
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-e578db18=""
  >
    <div
      class="t-progress"
      data-v-e578db18=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-error"
      >
        <div
          class="t-progress__inner"
          style="width: 88%;"
        >
          <div
            class="t-progress__info"
          >
            88%
          </div>
        </div>
        <!--v-if-->
      </div>
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
  <div
    class="example-progress__item"
    data-v-e578db18=""
  >
    <div
      class="t-progress"
      data-v-e578db18=""
    >
      <!-- LINE -->
      <!--v-if-->
      <!-- PLUMP -->
      <div
        class="t-progress__bar t-progress--plump t-progress--over-ten t-progress--status-success"
      >
        <div
          class="t-progress__inner"
          style="width: 88%;"
        >
          <div
            class="t-progress__info"
          >
            88%
          </div>
        </div>
        <!--v-if-->
      </div>
      <!-- CIRCLE -->
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Progress > Progress transitionVue demo works fine 1`] = `
<div
  class="example-progress"
  data-v-1cf0f4ed=""
>
  <div
    class="t-progress"
    data-v-1cf0f4ed=""
  >
    <!-- LINE -->
    <div
      class="t-progress--thin t-progress--status-default"
    >
      <div
        class="t-progress__bar"
      >
        <div
          class="t-progress__inner"
          style="width: 88%;"
        />
      </div>
      <div
        class="t-progress__info"
      >
        88%
      </div>
    </div>
    <!-- PLUMP -->
    <!--v-if-->
    <!-- CIRCLE -->
    <!--v-if-->
  </div>
  <div
    class="button-group"
    data-v-1cf0f4ed=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-small t-button--outline t-button--primary t-button--rectangle"
      data-v-1cf0f4ed=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        减少
        
      </span>
      <!---->
    </button>
    <div
      class="space"
      data-v-1cf0f4ed=""
    />
    <button
      aria-disabled="false"
      class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
      data-v-1cf0f4ed=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        增加
        
      </span>
      <!---->
    </button>
  </div>
</div>
`;
